# Robotics_Studio_1

./: CMakeLists.txt  Doxyfile  README.md  project_map.yaml
Week 1 Lab/: test_opencv  test_opencv.cpp
cylinder_detector/: CMakeLists.txt  package.xml
cylinder_detector/src/: cylinder_detector_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lab1_image_subscribing/lib/lab1_image_subscribing/: image_subscriber
install/lab1_image_subscribing/share/ament_index/resource_index/parent_prefix_path/: lab1_image_subscribing
install/lab1_image_subscribing/share/lab1_image_subscribing/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab2_laser_subscribing/lib/lab2_laser_subscribing/: laser_scan_processor
install/lab2_laser_subscribing/share/lab2_laser_subscribing/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab2_laser_subscribing/share/lab2_laser_subscribing/cmake/: lab2_laser_subscribingConfig.cmake
install/laser_scan_subpub/lib/laser_scan_subpub/: laser_scan_subpub
install/laser_scan_subpub/share/ament_index/resource_index/parent_prefix_path/: laser_scan_subpub
install/laser_scan_subpub/share/laser_scan_subpub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/laser_scan_subpub/share/laser_scan_subpub/cmake/: laser_scan_subpubConfig.cmake
install/my_worlds_pkg/share/ament_index/resource_index/parent_prefix_path/: my_worlds_pkg
install/my_worlds_pkg/share/my_worlds_pkg/: local_setup.sh  package.sh
install/my_worlds_pkg/share/my_worlds_pkg/launch/: office_world.launch.py
install/my_worlds_pkg/share/my_worlds_pkg/worlds/: office_world.world
install/opencv_lab1/lib/opencv_lab1/: image_subscriber
install/opencv_lab1/share/opencv_lab1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_lab1/share/opencv_lab1/cmake/: opencv_lab1Config.cmake
log/: latest_build
map_overlay/: CMakeLists.txt  package.xml
map_overlay/src/: overlay_maps.cpp
my_worlds_pkg/launch/: maze_world.launch.py  office_world.launch.py  search_rescue.launch.py
my_worlds_pkg/mapping/: my_map.pgm  my_map.yaml  project_map.pgm  simple_map_2.pgm  simple_map_2.yaml
my_worlds_pkg/mapping/ground_truth/: map.bt  map.yaml
my_worlds_pkg/models/30cm_cylinder/: model.config  model.sdf
my_worlds_pkg/models/Search_Rescue_ProjectWorld/: model.config  model.sdf
my_worlds_pkg/models/sandstone_model/: sandstone_model.config  sandstone_model.sdf
my_worlds_pkg/models/sandstone_model/meshes/: sandstone.stl
my_worlds_pkg/worlds/: office_world.world  search_rescue.world  search_rescue1.world
src/: image_subscriber.cpp
src/lab1_image_subscribing/: CMakeLists.txt
src/lab1_image_subscribing/install/: local_setup.sh  setup.sh
src/lab1_image_subscribing/log/: latest_build
src/lab2_laser_subscribing/: CMakeLists.txt
src/lab2_laser_subscribing/src/: laser_scan_processor_attempt.cpp
src/laser_scan_subpub/: CMakeLists.txt
src/laser_scan_subpub/src/: laser_scan_subpub.cpp
src/my_worlds_pkg/: CMakeLists.txt
src/my_worlds_pkg/worlds/: office_world.world
